# gatekeeper

./: Cargo.toml  README.md
gatekeeper/: Cargo.toml
gatekeeper-cli/: Cargo.toml
gatekeeper-cli/src/: cli.rs  lib.rs
gatekeeper/migrations/: 202508021739_initial.sql
gatekeeper/src/: arbiter.rs  client.rs  common.rs  db.rs  error.rs  lib.rs  server.rs
gatekeeper/src/db/: node.rs  node_role.rs  role.rs
gatekeeper/tests/: node_creation.rs  node_deletion.rs  role_assignment.rs  setup.rs  util.rs
