[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
data-encoding = "2.9.0"
iroh = "0.91.0"
rand = "0.8.5"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "sqlite",
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
] }
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
uuid = "1.17.0"
